@@ -295,7 +295,7 @@ pbsytest.panelmodel <- function(x, test=c("ar","re","j"), ...){
   ### as this is the version without support for unbalanced data, issue a warning
   ##  unbalanced capable version resides in SVN on r-forge: branches/kt_unbalanced/pbsytest/
   ##  and awaits approval
-  if (!pdim(x)$balanced) warning("unbalanced tests not yet implemented for pbsytest(), applying balanced tests to unbalanced model...")
+  if (!is.pbalanced(x)) warning("unbalanced tests not yet implemented for pbsytest(), applying balanced tests to unbalanced model...")
   
   poolres <- resid(x)
   data <- model.frame(x)
